syntax = "proto3";

package pb;

option go_package = "./pb";

message SuperAdmin {
	int64 superAdmin_id = 1;
	string user_id = 2;
	string user_name = 3;
	string first_name = 4;
	string last_name = 5;
	string nic = 6;
	string tell_no = 7;
	string address = 8;
	string user_email = 9;
	string user_pwd = 10;
	bool is_email_verified = 11;
	bool is_tell_no_verified = 12;
}

message RegisterSuperAdminRequest {
	string user_id = 1;
	string user_name = 2;
	string first_name = 3;
	string last_name = 4;
	string nic = 5;
	string tell_no = 6;
	string address = 7;
	string user_email = 8;
	string user_pwd = 9;
	bool is_email_verified = 10;
	bool is_tell_no_verified = 11;
}

message RegisterSuperAdminResponse {
	int64 superAdmin_id = 1;
	string user_id = 2;
}

message GetSuperAdminsRequest {}

message GetSuperAdminsResponse {
	repeated SuperAdmin superAdmins = 1;
}
